force-app/main/default/objects/SubClassification_Mapping__c/SubClassification_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SubClassification Mapping</label>
</CustomObject>