force-app/main/default/objects/SubClassification_Mapping__c/fields/Business_Classification__c.field-meta.xml
<CustomField>
    <fullName>Business_Classification__c</fullName>
    <label>Business Classification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>