force-app/main/default/objects/SubClassification_Mapping__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>