force-app/main/default/objects/SubClassification_Mapping__c/fields/SubClassification__c.field-meta.xml
<CustomField>
    <fullName>SubClassification__c</fullName>
    <label>SubClassification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>